// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Full Slider Render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-1yo1jo6-MuiStack-root"
      >
        <label
          class="MuiFormLabel-root MuiFormLabel-colorPrimary titleLabel css-u4tvz2-MuiFormLabel-root"
        >
          FullSlider Test Label
        </label>
        <button
          class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButtonBase-root Mui-disabled  css-1k23hlb-MuiButtonBase-root-MuiButton-root"
          data-testid="left-click"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
            data-testid="NavigateBeforeIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
        <span
          class="MuiSlider-colorPrimary MuiSlider-sizeMedium MuiSlider-root css-19rh4qf-MuiSlider-root"
        >
          <span
            class="MuiSlider-rail css-14pt78w-MuiSlider-rail"
          />
          <span
            class="MuiSlider-track css-1gv0vcd-MuiSlider-track"
            style="left: 0%; width: 0%;"
          />
          <span
            class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
            data-index="0"
            style="left: 0%;"
          />
          <span
            class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
            data-index="1"
            style="left: 50%;"
          />
          <span
            class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
            data-index="2"
            style="left: 100%;"
          />
          <span
            class="MuiSlider-thumbColorPrimary MuiSlider-thumbSizeMedium MuiSlider-thumb css-eg0mwd-MuiSlider-thumb"
            data-index="0"
            style="left: 0%;"
          >
            <input
              aria-orientation="horizontal"
              aria-valuemax="2"
              aria-valuemin="0"
              aria-valuenow="0"
              data-index="0"
              max="2"
              min="0"
              step="1"
              style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
              type="range"
              value="0"
            />
          </span>
        </span>
        <button
          class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButtonBase-root  css-1k23hlb-MuiButtonBase-root-MuiButton-root"
          data-testid="right-click"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
            data-testid="NavigateNextIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <label
          class="MuiFormLabel-root MuiFormLabel-colorPrimary resultLabel css-gdirxv-MuiFormLabel-root"
          data-testid="result-label"
        >
          one
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1yo1jo6-MuiStack-root"
    >
      <label
        class="MuiFormLabel-root MuiFormLabel-colorPrimary titleLabel css-u4tvz2-MuiFormLabel-root"
      >
        FullSlider Test Label
      </label>
      <button
        class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButtonBase-root Mui-disabled  css-1k23hlb-MuiButtonBase-root-MuiButton-root"
        data-testid="left-click"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="NavigateBeforeIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
          />
        </svg>
      </button>
      <span
        class="MuiSlider-colorPrimary MuiSlider-sizeMedium MuiSlider-root css-19rh4qf-MuiSlider-root"
      >
        <span
          class="MuiSlider-rail css-14pt78w-MuiSlider-rail"
        />
        <span
          class="MuiSlider-track css-1gv0vcd-MuiSlider-track"
          style="left: 0%; width: 0%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
          data-index="0"
          style="left: 0%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="1"
          style="left: 50%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="2"
          style="left: 100%;"
        />
        <span
          class="MuiSlider-thumbColorPrimary MuiSlider-thumbSizeMedium MuiSlider-thumb css-eg0mwd-MuiSlider-thumb"
          data-index="0"
          style="left: 0%;"
        >
          <input
            aria-orientation="horizontal"
            aria-valuemax="2"
            aria-valuemin="0"
            aria-valuenow="0"
            data-index="0"
            max="2"
            min="0"
            step="1"
            style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
            type="range"
            value="0"
          />
        </span>
      </span>
      <button
        class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButtonBase-root  css-1k23hlb-MuiButtonBase-root-MuiButton-root"
        data-testid="right-click"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="NavigateNextIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <label
        class="MuiFormLabel-root MuiFormLabel-colorPrimary resultLabel css-gdirxv-MuiFormLabel-root"
        data-testid="result-label"
      >
        one
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`inverted Slider 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-1yo1jo6-MuiStack-root"
      >
        <label
          class="MuiFormLabel-root MuiFormLabel-colorPrimary titleLabel css-u4tvz2-MuiFormLabel-root"
        >
          FullSlider Test Label
        </label>
        <button
          class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButtonBase-root  css-1k23hlb-MuiButtonBase-root-MuiButton-root"
          data-testid="left-click"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
            data-testid="NavigateBeforeIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiSlider-colorPrimary MuiSlider-sizeMedium MuiSlider-root MuiSlider-trackInverted css-19rh4qf-MuiSlider-root"
        >
          <span
            class="MuiSlider-rail css-1xst22u-MuiSlider-rail"
          />
          <span
            class="MuiSlider-track css-1h4p1o1-MuiSlider-track"
            style="left: 0%; width: 66.66666666666667%;"
          />
          <span
            class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
            data-index="0"
            style="left: 0%;"
          />
          <span
            class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
            data-index="1"
            style="left: 33.333333333333336%;"
          />
          <span
            class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
            data-index="2"
            style="left: 66.66666666666667%;"
          />
          <span
            class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
            data-index="3"
            style="left: 100%;"
          />
          <span
            class="MuiSlider-thumbColorPrimary MuiSlider-thumbSizeMedium MuiSlider-thumb css-eg0mwd-MuiSlider-thumb"
            data-index="0"
            style="left: 66.66666666666667%;"
          >
            <input
              aria-orientation="horizontal"
              aria-valuemax="3"
              aria-valuemin="0"
              aria-valuenow="2"
              data-index="0"
              max="3"
              min="0"
              step="1"
              style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
              type="range"
              value="2"
            />
          </span>
        </span>
        <button
          class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButtonBase-root  css-1k23hlb-MuiButtonBase-root-MuiButton-root"
          data-testid="right-click"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
            data-testid="NavigateNextIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <label
          class="MuiFormLabel-root MuiFormLabel-colorPrimary resultLabel css-gdirxv-MuiFormLabel-root"
          data-testid="result-label"
        >
          three
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1yo1jo6-MuiStack-root"
    >
      <label
        class="MuiFormLabel-root MuiFormLabel-colorPrimary titleLabel css-u4tvz2-MuiFormLabel-root"
      >
        FullSlider Test Label
      </label>
      <button
        class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButtonBase-root  css-1k23hlb-MuiButtonBase-root-MuiButton-root"
        data-testid="left-click"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="NavigateBeforeIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <span
        class="MuiSlider-colorPrimary MuiSlider-sizeMedium MuiSlider-root MuiSlider-trackInverted css-19rh4qf-MuiSlider-root"
      >
        <span
          class="MuiSlider-rail css-1xst22u-MuiSlider-rail"
        />
        <span
          class="MuiSlider-track css-1h4p1o1-MuiSlider-track"
          style="left: 0%; width: 66.66666666666667%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="0"
          style="left: 0%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="1"
          style="left: 33.333333333333336%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
          data-index="2"
          style="left: 66.66666666666667%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
          data-index="3"
          style="left: 100%;"
        />
        <span
          class="MuiSlider-thumbColorPrimary MuiSlider-thumbSizeMedium MuiSlider-thumb css-eg0mwd-MuiSlider-thumb"
          data-index="0"
          style="left: 66.66666666666667%;"
        >
          <input
            aria-orientation="horizontal"
            aria-valuemax="3"
            aria-valuemin="0"
            aria-valuenow="2"
            data-index="0"
            max="3"
            min="0"
            step="1"
            style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
            type="range"
            value="2"
          />
        </span>
      </span>
      <button
        class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButtonBase-root  css-1k23hlb-MuiButtonBase-root-MuiButton-root"
        data-testid="right-click"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="NavigateNextIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <label
        class="MuiFormLabel-root MuiFormLabel-colorPrimary resultLabel css-gdirxv-MuiFormLabel-root"
        data-testid="result-label"
      >
        three
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
